--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     
     <!.....CEO Message >
     <div class="left">
-      <img src="ceoo.jpg" alt="CEO Juma Kitenge of GreenHarvest"><br>
+      <img src="zulfa.jpg" alt="CEO Zulfa Salum of GreenHarvest"><br>
       <strong>Zulfaf</strong>, CEO
       <h2>Message from Our CEO</h2>
       <p>
