--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
     <!.....CEO Message >
     <div class="left">
       <img src="IMG-20250509-WA0005.jpg" alt="CEO Zulfa Salum of GreenHarvest"><br>
-      <strong>Zulfaf</strong>, CEO
+      <strong>Zulfa Mwakatuli</strong>, CEO
       <h2>Message from Our CEO</h2>
       <p>
         “Welcome to GreenHarvest! Our mission is to empower every Tanzanian farmer with knowledge, tools, and access to technology that increases productivity and improves livelihoods. Let’s grow together!”</p>
