--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
   <h3>Contact Details:</h3>
   <ul>
-    <li><strong>Phone:</strong> +255 712 345 678</li>
+    <li><strong>Phone:</strong> 0612008081</li>
     <li><strong>Email:</strong> info@greenharvest.co.tz</li>
     <li><strong>Location:</strong> Dodoma, Tanzania</li>
   </ul>
